# observability-platform

./: .gitignore  Makefile  README.md  SRE_Observability_Platform_Guide.docx  kind-config.yaml
.github/workflows/: ci.yaml
apps/metrics-bridge/: Dockerfile  main.py  pyproject.toml
apps/metrics-bridge/bridge/: config.py  consumer.py  metrics.py
apps/metrics-bridge/tests/: test_api.py  test_config.py  test_consumer.py  test_metrics.py
apps/stream-processor/: Dockerfile  main.py  pyproject.toml
apps/stream-processor/processor/: alerter.py  config.py  consumer.py  detector.py  rules.py  state.py
apps/stream-processor/tests/: test_alerter.py  test_config.py  test_detector.py  test_rules.py  test_state.py
apps/workload-simulator/: .dockerignore  Dockerfile  main.py  pyproject.toml
apps/workload-simulator/simulator/: config.py  metrics.py  models.py  producer.py
apps/workload-simulator/tests/: test_config.py  test_metrics_generator.py  test_models.py  test_producer.py
dashboards/: golden-signals.json  kafka-consumer-lag.json  kubernetes-platform.json  slo-dashboard.json
dashboards/provisioning/: dashboards.yaml  datasources.yaml
docs/adr/: ADR-001-kafka-over-remote-write.md  ADR-002-consumer-lag-vs-cpu-hpa.md  ADR-003-chainguard-distroless-images.md
docs/slos/: api-service.yaml
helm/metrics-bridge/: Chart.yaml  values.yaml
helm/metrics-bridge/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/observability-platform/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/observability-platform/templates/: NOTES.txt  _helpers.tpl  prometheusrule.yaml  servicemonitor.yaml
helm/stream-processor/: Chart.yaml  values.yaml
helm/stream-processor/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml
helm/workload-simulator/: Chart.yaml  values.yaml
k8s/: namespaces.yaml  network-policies.yaml  rbac.yaml
runbooks/: error-budget-burn.md  high-error-rate.md  high-latency-p99.md
scripts/: load_test.py  setup.sh
tests/: smoke_test.py
(+5 files in other folders)
