[tool.poetry]
name = "stream-processor"
version = "0.1.0"
description = "Consumes Kafka metrics, detects anomalies, and fires alerts"
authors = ["SRE Platform Team"]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.3.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
